# lpte

./: .gitignore  CONTRIBUTING.md  LICENSE  Procfile  README.md  ROADMAP.md  agents.md  pyproject.toml  render-build-faild.txt  render.yaml  skills.md
example/: main.py
languages/: bn_profile.json  en_profile.json  es_profile.json  hi_profile.json
lpte/: __init__.py
lpte/core/: classifier.py  engine.py  loader.py  normalizer.py  profile.py  stemmer.py  tokenizer.py
lpte/languages/: __init__.py  bn.py  en.py
tests/: test_bengali_stemmer.py  test_bypass_tricks.py  test_classifier.py  test_engine.py  test_english_stemmer.py  test_loader.py  test_normalizer.py  test_tokenizer.py
website/: app.py  requirements.txt
website/static/: index.html
